--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,12 @@
         text-decoration-line: none;
         letter-spacing: 0.0625rem;
     }
+    @media(max-width: 480px) {
+
+    .header__email {
+            margin-bottom: 30px
+    }
+        }
 .main {
     background-image: url(../src/img/main.png);
     background-repeat: no-repeat;
@@ -69,7 +75,7 @@
 @media(max-width: 480px) {
 
     .main__title {
-        font-size: 1.5rem;
+        font-size: 1.875rem;
         padding: 20px 0 15px
     }
       }
@@ -103,8 +109,14 @@
       font-size: 1.875rem;
       text-align: center;
       text-transform: uppercase;
-      letter-spacing: 0.09375rem;
+      letter-spacing: 0.09375rem
     }
+@media(max-width: 480px){
+
+    .main__result__title {
+          font-size: 1.375rem
+    }
+      }
 .main__result__disc {
       color: #63a1fe;
       font-family: "Proxima Nova - Black";
@@ -112,11 +124,23 @@
       text-align: center;
       text-transform: uppercase;
       margin-bottom: 20px;
-      letter-spacing: 0.09375rem;
+      letter-spacing: 0.09375rem
+    }
+@media(max-width: 480px){
+
+    .main__result__disc {
+        font-size: 1.375rem
+    }
     }
 .main__result__btn {
-      text-align: center;
+      text-align: center
     }
+@media(max-width: 480px) {
+    
+    .main__result__btn {
+          margin-top: 50px
+    }
+      }
 .main__result__btn a {
         width: 317px;
         height: 76px;
@@ -137,17 +161,29 @@
           content: url('../src//img/arr.png');
           position: absolute;
           left: -50px;
-          top: -50px;
+          top: -50px
 
         }
+@media(max-width: 480px) {
+
+        .main__result__btn a:before {
+            content: url('../src/img/arr2.png');
+            left: 8px;
+            top: -70px
+
+        }
+
+          }
 .main__result__btn a:hover {
           box-shadow: 0 0 10px rgba(255,255,255,0.5);
         }
 @media(max-width: 480px) {
 
       .main__result__btn a {
-          width: 280px;
-          font-size: 1.25rem
+          width: 234px;
+          height: 52px;
+          padding-top: 12px;
+          font-size: 1.125rem
       }
         }
 .block {
@@ -169,7 +205,7 @@
     }
 @media(max-width: 480px){
 .block {
-      margin-bottom: 15px
+      margin-bottom: 65px
 }
     }
 .block__icon {
@@ -212,7 +248,8 @@
 @media(max-width: 480px){
 
   .block__title {
-      font-size: 1rem
+      font-size: 1.125rem;
+      max-width: 205px
   }
     }
 .block__price {
