--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,7 +26,7 @@
       letter-spacing: 2.4px;
 
       @media(max-width: 480px) {
-        font-size: 24px;
+        font-size: 30px;
         padding: 20px 0 15px;
       }
     }
@@ -64,6 +64,10 @@
       text-align: center;
       text-transform: uppercase;
       letter-spacing: 1.5px;
+
+      @media(max-width: 480px){
+          font-size: 22px;
+      }
     }
 
     &__result__disc {
@@ -74,10 +78,18 @@
       text-transform: uppercase;
       margin-bottom: 20px;
       letter-spacing: 1.5px;
+
+      @media(max-width: 480px){
+        font-size: 22px;
+    }
     }
     
     &__result__btn {
       text-align: center;
+
+      @media(max-width: 480px) {
+          margin-top: 50px;
+      }
 
       a {
         width: 317px;
@@ -101,6 +113,13 @@
           left: -50px;
           top: -50px;
 
+          @media(max-width: 480px) {
+            content: url('../src/img/arr2.png');
+            left: 8px;
+            top: -70px;
+
+          }
+
         }
 
         &:hover {
@@ -108,8 +127,10 @@
         }
 
         @media(max-width: 480px) {
-          width: 280px;
-          font-size: 20px;
+          width: 234px;
+          height: 52px;
+          padding-top: 12px;
+          font-size: 18px;
         }
       }
     }
@@ -131,7 +152,7 @@
     }
 
     @media(max-width: 480px){
-      margin-bottom: 15px;
+      margin-bottom: 65px;
     }
     
     &__icon {
@@ -177,7 +198,8 @@
     letter-spacing: 1px;
 
     @media(max-width: 480px){
-      font-size: 16px;
+      font-size: 18px;
+      max-width: 205px;
     }
   }
 
