--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@
         }
     @media(max-width: 480px) {
 
+    .header__logo {
+            margin-bottom: 30px
+    }
+        }
+    @media(max-width: 480px) {
+
     .header__logo img{
             width: 100%
     }
