fixed mobile version

--- a/src/components/main.html
+++ b/src/components/main.html
@@ -27,7 +27,13 @@
     <div class="main__result">
       <div class="main__result__title">Узнайте стоимость вашей ликвидации</div>
       <div class="main__result__disc">за 1 минуту</div>
-      <div class="main__result__btn"><a href="#popup:marquiz_5d777bd0a702ac00440a1eb6">Рассчитать стоимость</a></div>
+      <div class="main__result__btn">
+        <!-- <a href="#popup:marquiz_5d777bd0a702ac00440a1eb6">Рассчитать стоимость</a> -->
+        <button class="btn" onclick="Marquiz.showModal('5d777bd0a702ac00440a1eb6')">
+            Рассчитать стоимость 
+          </button>
+      </div>
     </div>
+
   </div>
 </div>
