--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-.header__line {
+.header {
+    background: white;
+}
+    .header__line {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -11,9 +14,16 @@
     }
         }
     @media(max-width: 480px) {
+    .header__line {
+            padding: 20px 0;
+            flex-direction: row;
+            align-items: stretch
+    }
+        }
+    @media(max-width: 480px) {
 
     .header__logo {
-            margin-bottom: 30px
+            margin-bottom: 25px
     }
         }
     @media(max-width: 480px) {
@@ -36,18 +46,33 @@
             text-align: center
     }
         }
+    @media(max-width: 480px){
+
+    .header__title {
+            font-size: 0.75rem;
+            letter-spacing: 0.0375rem;
+            margin-bottom: 0px
+    }
+        }
     .header__disc a{
         color: #323232;
         font-family: "Proxima Nova - Semibold";
         font-size: 1.5rem;
         text-decoration-line: none;
-        letter-spacing: 0.0625rem;
+        letter-spacing: 0.0625rem
     }
+    @media(max-width: 480px){
+
+    .header__disc a{
+            font-size: 1rem;
+            letter-spacing: 0.0375rem
+    }
+        }
     @media(max-width: 480px) {
 
-    .header__email {
-            margin-bottom: 30px
-    }
+            .header__email .header__title {
+                text-align: left;
+            }
         }
 .main {
     background-image: url(../src/img/main.png);
@@ -55,7 +80,8 @@
     background-position: center;
     background-size: cover;
     height: 854px;
-    background-color: #383c40
+    background-color: #383c40;
+    margin-bottom: 50px
 }
 @media(max-width: 950px) {
 .main {
@@ -66,6 +92,12 @@
 .main {
       background-size: contain;
       background-position: center top
+}
+    }
+@media(max-width: 480px) {
+.main {
+      margin-bottom: 0px;
+      background-position: center 100px
 }
     }
 .main__title {
@@ -130,68 +162,40 @@
       text-align: center;
       text-transform: uppercase;
       margin-bottom: 20px;
-      letter-spacing: 0.09375rem
+      letter-spacing: 0.09375rem;
+      position: relative
     }
 @media(max-width: 480px){
 
     .main__result__disc {
         font-size: 1.375rem
     }
-    }
+      }
+.main__result__disc:before {
+        content: url('../src/img/arr.png');
+        position: absolute;
+        left: 0;
+        right: 0;
+        transform: translate(-195px,20px)
+      }
+@media(max-width: 480px) {
+
+      .main__result__disc:before {
+          content: url('../src/img/arr2.png');
+          transform: translate(-95px,15px)
+      }
+        }
 .main__result__btn {
-      text-align: center
+      text-align: center;
+      position: relative;
+      padding-top: 100px
     }
 @media(max-width: 480px) {
     
     .main__result__btn {
-          margin-top: 50px
+          margin-top: 30px
     }
       }
-.main__result__btn a {
-        width: 317px;
-        height: 76px;
-        box-shadow: 0 2px 16px rgba(0, 0, 0, 0.21);
-        border-radius: 38px;
-        color: white;
-        text-decoration: none;
-        font-family: "Proxima Nova - Semibold";
-        font-size: 1.5rem;
-        background-color: #b41919;
-        display: inline-block;
-        padding-top: 20px;
-        letter-spacing: 0.09375rem;
-        position: relative;
-        transition: all .3s
-      }
-.main__result__btn a:before {
-          content: url('../src//img/arr.png');
-          position: absolute;
-          left: -50px;
-          top: -50px
-
-        }
-@media(max-width: 480px) {
-
-        .main__result__btn a:before {
-            content: url('../src/img/arr2.png');
-            left: 8px;
-            top: -70px
-
-        }
-
-          }
-.main__result__btn a:hover {
-          box-shadow: 0 0 10px rgba(255,255,255,0.5);
-        }
-@media(max-width: 480px) {
-
-      .main__result__btn a {
-          width: 234px;
-          height: 52px;
-          padding-top: 12px;
-          font-size: 1.125rem
-      }
-        }
 .block {
     width: 25%;
     display: flex;
@@ -206,7 +210,7 @@
     }
 @media(max-width: 767px) {
 .block {
-      width: 100%
+      width: 50%
 }
     }
 @media(max-width: 480px){
@@ -254,8 +258,10 @@
 @media(max-width: 480px){
 
   .block__title {
-      font-size: 1.125rem;
-      max-width: 205px
+      font-size: 0.875rem;
+      width: 145px;
+      letter-spacing: 0.03125rem;
+      padding: 0
   }
     }
 .block__price {
@@ -267,8 +273,74 @@
     height: 38px;
     text-align: center;
     padding-top: 5px;
-    border-radius: 19px;
+    border-radius: 19px
   }
+@media(max-width: 480px){
+
+  .block__price {
+      font-size: 0.875rem;
+      width: 103px;
+      height: 29px
+  }
+    }
+.btn{
+  letter-spacing: 0.09375rem;
+  font-family: "Proxima Nova - Semibold";
+  font-size: 1.5rem;
+  box-shadow: 0 2px 16px rgba(0, 0, 0, 0.21);
+  border-radius: 38px;
+  color: white;
+  font-size:1.25rem;
+  background:#b41919;
+  cursor:pointer;
+  border: none;
+  width: 317px;
+  height: 76px;
+  position:absolute;
+  left:50%;
+  top:50%;
+  text-align:center;
+  -webkit-transform:translate(-50%,-50%);
+  transform:translate(-50%,-50%);
+   -webkit-transition:all .6s ease-in-out;
+  transition:all .6s ease-in-out;
+ overflow:hidden
+}
+@media(max-width: 480px) {
+.btn{
+    width: 234px;
+    height: 52px;
+    font-size: 1.125rem
+}
+  }
+.btn::after{
+  content:'';
+  position:absolute;
+  top: -123px;
+  margin:auto;
+  display:block;
+  border-radius:50%;
+  width: 360px;
+  height: 320px;
+  left:-28px;
+  -webkit-transition:box-shadow .6s ease-in-out;
+  transition:box-shadow .6s ease-in-out;
+  z-index:-1
+ 
+}
+@media(max-width: 480px){
+.btn::after{
+    width: 290px;
+    height: 290px
+ 
+}
+  }
+.btn:hover{
+  color:#fff;
+}
+.btn:hover::after{
+  box-shadow:inset 0 0 0 160px #63a1fe;
+}
 .footer {
   background-color: #3a3a3a;
   font-family: "Proxima Nova - Semibold";
@@ -279,6 +351,11 @@
 @media(max-width: 768px) {
 .footer {
     font-size: 0.875rem
+}
+  }
+@media(max-width: 480px) {
+.footer {
+    padding: 20px 0
 }
   }
 .fblock {
@@ -351,8 +428,7 @@ body, html {
     line-height: 1.5;
     color: #000;
     color: var(--black);
-    background-color: #fff;
-    background-color: var(--white);
+    background-color: #383c3f;
 }
 .container {
     max-width: 1180px;
