--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,4 +1,5 @@
 .header {
+    background: white;
     &__line {
         display: flex;
         flex-wrap: wrap;
@@ -9,11 +10,17 @@
         @media(max-width: 768px) {
             flex-direction: column;
         }
+
+        @media(max-width: 480px) {
+            padding: 20px 0;
+            flex-direction: row;
+            align-items: stretch;
+        }
     }
 
     &__logo {
         @media(max-width: 480px) {
-            margin-bottom: 30px
+            margin-bottom: 25px;
         }
     }
 
@@ -34,6 +41,12 @@
         @media(max-width: 768px) {
             text-align: center;
         }
+
+        @media(max-width: 480px){
+            font-size: 12px;
+            letter-spacing: 0.6px;
+            margin-bottom: 0px;
+        }
     }
 
     &__disc a{
@@ -42,11 +55,21 @@
         font-size: 24px;
         text-decoration-line: none;
         letter-spacing: 1px;
+
+        @media(max-width: 480px){
+            font-size: 16px;
+            letter-spacing: 0.6px;
+        }
     }
 
     &__email {
         @media(max-width: 480px) {
-            margin-bottom: 30px;
+
+            .header__title {
+                text-align: left;
+            }
         }
+
+
     }
 }
