--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -55,7 +55,7 @@ body, html {
     font-weight: 400;
     line-height: 1.5;
     color: var(--black);
-    background-color: var(--white);
+    background-color: #383c3f;
 }
 
 .container {
