fix 03.12, googleTask, quiz

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -9,4 +9,9 @@
       </div>
     </div>
   </div>
+  <div class="footer__copy">
+      <div class="container">
+        Разработка сайта <a href="http://biz-up.by" target="_blank">BizUp Studio</a>
+      </div>
+    </div>
 </div>
