--- a/src/components/main.html
+++ b/src/components/main.html
@@ -29,7 +29,8 @@
       <div class="main__result__disc">за 1 минуту</div>
       <div class="main__result__btn">
         <!-- <a href="#popup:marquiz_5d777bd0a702ac00440a1eb6">Рассчитать стоимость</a> -->
-        <button class="btn" onclick="Marquiz.showModal('5d777bd0a702ac00440a1eb6')">
+        <!-- <button class="btn" onclick="Marquiz.showModal('5d777bd0a702ac00440a1eb6')"> -->
+          <button class="btn" onclick="Marquiz.showModal('5de658d8e71cb90046e8668b')">
             Рассчитать стоимость 
           </button>
       </div>
