--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
-        padding: 30px 0
+        padding: 20px 0
     }
     @media(max-width: 768px) {
     .header__line {
@@ -37,7 +37,7 @@
         font-family: "Proxima Nova";
         font-size: 1.125rem;
         text-align: right;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
         letter-spacing: 0.0625rem
     }
     @media(max-width: 768px) {
@@ -57,7 +57,7 @@
     .header__disc a{
         color: #323232;
         font-family: "Proxima Nova - Semibold";
-        font-size: 1.5rem;
+        font-size: 1.4375rem;
         text-decoration-line: none;
         letter-spacing: 0.0625rem
     }
@@ -80,8 +80,7 @@
     background-position: center;
     background-size: cover;
     height: 854px;
-    background-color: #383c40;
-    margin-bottom: 50px
+    background-color: #383c40
 }
 @media(max-width: 950px) {
 .main {
@@ -107,7 +106,7 @@
       text-align: center;
       max-width: 840px;
       margin: 0 auto;
-      padding: 70px 0 30px;
+      padding: 45px 0 30px;
       letter-spacing: 0.15rem
     }
 @media(max-width: 480px) {
@@ -188,7 +187,7 @@
 .main__result__btn {
       text-align: center;
       position: relative;
-      padding-top: 100px
+      padding-top: 60px
     }
 @media(max-width: 480px) {
     
@@ -253,7 +252,8 @@
     text-align: center;
     margin-bottom: 20px;
     padding: 0 10px;
-    letter-spacing: 0.0625rem
+    letter-spacing: 0.0625rem;
+    line-height: 1.5rem
   }
 @media(max-width: 480px){
 
@@ -346,7 +346,7 @@
   font-family: "Proxima Nova - Semibold";
   font-size: 1.125rem;
   color: #adacac;
-  padding: 50px 0
+  padding: 25px 0 15px
 }
 @media(max-width: 768px) {
 .footer {
@@ -358,6 +358,17 @@
     padding: 20px 0
 }
   }
+.footer__copy {
+    padding-top: 35px;
+    text-align: left;
+    font-family: "Proxima Nova";
+    font-size: 0.75rem;
+  }
+.footer__copy a {
+      font-family: "Proxima Nova";
+      color: #adacac;
+      text-decoration: none;
+    }
 .fblock {
   display: flex;
   justify-content: space-between
