--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -3,7 +3,7 @@
   font-family: "Proxima Nova - Semibold";
   font-size: 18px;
   color: #adacac;
-  padding: 50px 0;
+  padding: 25px 0 15px;
 
   @media(max-width: 768px) {
     font-size: 14px;
@@ -11,6 +11,19 @@
 
   @media(max-width: 480px) {
     padding: 20px 0;
+  }
+
+  &__copy {
+    padding-top: 35px;
+    text-align: left;
+    font-family: "Proxima Nova";
+    font-size: 12px;
+
+    a {
+      font-family: "Proxima Nova";
+      color: #adacac;
+      text-decoration: none;
+    }
   }
 }
 
@@ -33,3 +46,5 @@
     }
   }
 }
+
+
