--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,7 +5,6 @@
     background-size: cover;
     height: 854px;
     background-color: #383c40;
-    margin-bottom: 50px;
 
     @media(max-width: 950px) {
       height: auto;
@@ -28,8 +27,9 @@
       text-align: center;
       max-width: 840px;
       margin: 0 auto;
-      padding: 70px 0 30px;
+      padding: 45px 0 30px;
       letter-spacing: 2.4px;
+      
 
       @media(max-width: 480px) {
         font-size: 30px;
@@ -107,7 +107,7 @@
     &__result__btn {
       text-align: center;
       position: relative;
-      padding-top: 100px;
+      padding-top: 60px;
 
       @media(max-width: 480px) {
           margin-top: 30px;
@@ -175,6 +175,7 @@
     margin-bottom: 20px;
     padding: 0 10px;
     letter-spacing: 1px;
+    line-height: 1.5rem;
 
     @media(max-width: 480px){
       font-size: 14px;
